--- a/src/main/resources/META-INF/resources/BirimTanim.xhtml
+++ b/src/main/resources/META-INF/resources/BirimTanim.xhtml
@@ -28,12 +28,11 @@
                 <p:menuitem value="Tetkik Kabul" url="./TetkikKabul.xhtml" includeViewParams="MR"/>
             </p:submenu>
             <p:submenu label="Randevu İşlemleri" icon="fa-calendar">
-                <p:menuitem value="Randevu Şablon" url="./RandevuSablon.xhtml" icon="fa-calendar"/>
-                <p:menuitem value="Randevu Seans" url="./RandevuSeans.xhtml" icon="fa-calendar"/>
-                <p:menuitem value="Randevu Alma" url="./Randevu.xhtml" icon="fa-calendar"/>
+                <p:menuitem value="Randevu Şablon" url="pages/RandevuSablon.xhtml" icon="fa-calendar"/>
+                <p:menuitem value="Randevu Seans" url="pages/RandevuSeans.xhtml" icon="fa-calendar"/>
+                <p:menuitem value="Randevu Alma" url="pages/Randevu.xhtml" icon="fa-calendar"/>
             </p:submenu>
         </p:menubar>
-        <!--<p:menubar model="#{sessionInitializer.menuModel}"/>-->
     </h:form>
 
 </h:head>
