--- a/src/main/resources/META-INF/resources/home.xhtml
+++ b/src/main/resources/META-INF/resources/home.xhtml
@@ -15,7 +15,7 @@
             <p:submenu label="Tanımlama İşlemleri" icon="ui-icon-person">
                     <p:menuitem value="Kullanıcı Tanım" url="./UserTanim.xhtml" icon="ui-icon-person"/>
                     <p:menuitem value="Role Tanım" url="./RoleTanim.xhtml" icon="ui-icon-person"/>
-                    <p:menuitem value="Menu Tanım" url="./MenuTanim" icon="ui-icon-person"/>
+                    <p:menuitem value="Menu Tanım" url="./MenuTanim.xhtml" icon="ui-icon-person"/>
                     <p:menuitem value="Permission Tanım" url="./PermissionTanim.xhtml" icon="ui-icon-person"/>
                     <p:menuitem value="Personel Tanım" url="./PersonelTanim.xhtml" icon="ui-icon-person"/>
                     <p:menuitem value="Tetkik Tanım" url="./TetkikTanim.xhtml"/>
