--- a/src/main/resources/META-INF/resources/UserTanim.xhtml
+++ b/src/main/resources/META-INF/resources/UserTanim.xhtml
@@ -14,7 +14,7 @@
             <p:submenu label="Tanımlama İşlemleri" icon="ui-icon-person">
                 <p:menuitem value="Kullanıcı Tanım" url="./UserTanim.xhtml" icon="ui-icon-person"/>
                 <p:menuitem value="Role Tanım" url="./RoleTanim.xhtml" icon="ui-icon-person"/>
-                <p:menuitem value="Menu Tanım" url="./MenuTanim" icon="ui-icon-person"/>
+                <p:menuitem value="Menu Tanım" url="./MenuTanim.xhtml" icon="ui-icon-person"/>
                 <p:menuitem value="Permission Tanım" url="./PermissionTanim.xhtml" icon="ui-icon-person"/>
                 <p:menuitem value="Personel Tanım" url="./PersonelTanim.xhtml" icon="ui-icon-person"/>
                 <p:menuitem value="Tetkik Tanım" url="./TetkikTanim.xhtml"/>
@@ -32,6 +32,7 @@
                 <p:menuitem value="Randevu Seans" url="pages/RandevuSeans.xhtml" icon="fa-calendar"/>
                 <p:menuitem value="Randevu Alma" url="pages/Randevu.xhtml" icon="fa-calendar"/>
             </p:submenu>
+            <p:menuitem value="Çıkış" style="float: right" action="#{sessionInitializer.exit}" icon="ui-icon-close"/>
         </p:menubar>
         <!--<p:menubar model="#{sessionInitializer.menuModel}"/>-->
     </h:form>
@@ -40,28 +41,27 @@
 
 
 <h:body>
-    <h:form>
-        <h:panelGrid style="float: left">
-            <p:dataTable id="eventsDT" var="car" value="#{userBean.users}" selectionMode="single" selection="#{dtSelectionView.selectedCar}" rowKey="#{car.id}">
-                <f:facet name="header">
-                    Select Events
-                </f:facet>
-                <p:ajax event="rowSelect" listener="#{dtSelectionView.onRowSelect}" update=":form:msgs" />
-                <p:column headerText="Id">
-                    <h:outputText value="#{car.id}" />
+    <h:form id="FRMUsr">
+        <h:panelGrid styleClass="leftPanel">
+            <p:dataTable id="userDt" var="user" value="#{userBean.userList}" selectionMode="single"
+                         selection="#{userBean.selectedUser}" rowKey="#{user.id}" >
+
+                <p:ajax event="rowSelect" listener="#{userBean.onRowSelect}" update=":FRMUsr:userPG"/>
+                <p:column headerText="Adı">
+                    <h:outputText value="#{user.name}"/>
                 </p:column>
-                <p:column headerText="Year">
-                    <h:outputText value="#{car.year}" />
+                <p:column headerText="Soyadı">
+                    <h:outputText value="#{user.surname}"/>
                 </p:column>
-                <p:column headerText="Brand">
-                    <h:outputText value="#{car.brand}" />
+                <p:column headerText="Kullanıcı Adı">
+                    <h:outputText value="#{user.username}"/>
                 </p:column>
-                <p:column headerText="Color">
-                    <h:outputText value="#{car.color}" />
+                <p:column headerText="Kullanıcı Aktif Mi">
+                    <h:outputText value="#{user.enabled}"/>
                 </p:column>
             </p:dataTable>
         </h:panelGrid>
-        <h:panelGrid columns="4" style="margin-top: 50px; float: right">
+        <h:panelGrid id="userPG" columns="4" styleClass="rightPanel">
             <h3>Yeni Kullanıcı Kaydı</h3>
             <h:outputText/>
             <h:outputText/>
@@ -69,23 +69,23 @@
 
             <h:outputText value="Adı"/>
             <h:outputText value="*"/>
-            <p:inputText id="name" value="#{userBean.name}" required="true"/>
+            <p:inputText id="name" value="#{userBean.user.name}" required="true"/>
             <p:message for="name"/>
 
             <h:outputText value="Soyadı"/>
             <h:outputText value="*"/>
-            <p:inputText id="surname" value="#{userBean.surname}" required="true"/>
+            <p:inputText id="surname" value="#{userBean.user.surname}" required="true"/>
             <p:message for="surname"/>
 
             <h:outputText value="Kullanıcı Adı"/>
             <h:outputText value="*"/>
-            <p:inputText id="username" value="#{userBean.username}" required="true"/>
+            <p:inputText id="username" value="#{userBean.user.username}" required="true"/>
             <p:message for="username"/>
 
 
             <h:outputText value="Parola"/>
             <h:outputText value="*"/>
-            <p:password id="password" value="#{userBean.password}" required="true"
+            <p:password id="password" value="#{userBean.user.password}" required="true"
                         match="passwordAgain"/>
             <p:message for="password"/>
 
@@ -96,18 +96,23 @@
 
             <h:outputText value="Rolü"/>
             <h:outputText value="*"/>
-            <h:selectOneMenu id="role" value="#{roleBean.role}">
-                <f:selectItems value="#{roleBean.roles}" var="role" itemValue="#{role}" itemLabel="#{role.name}"/>
+            <h:selectOneMenu id="role" value="#{roleBean.role}" converter="#{listConverter}">
+                <f:selectItems value="#{roleBean.roles}" var="role" itemValue="#{role}" itemLabel="#{role.name}" />
             </h:selectOneMenu>
             <p:message for="role"/>
             <!--var="role" itemValue="#{role.id}" itemLabel="#{role.name}"-->
             <h:outputText value="Kullanıcı Aktif Mi"/>
             <h:outputText value="*"/>
-            <p:selectBooleanCheckbox id="enabled" value="#{userBean.enabled}" required="true"/>
+            <p:selectBooleanCheckbox id="enabled" value="#{userBean.user.enabled}" required="true"/>
             <p:message for="enabled"/>
 
             <p:commandButton value="Kaydet" actionListener="#{userBean.save}" ajax="false"
                              icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
+
+            <!--<p:commandButton value="Reset" actionListener="#{userBean.clearGrid}" immediate="true" ajax="false" style="margin-right:20px;">-->
+                <!--<p:resetInput target="userPG" />-->
+            <!--</p:commandButton>-->
+
         </h:panelGrid>
 
 
