--- a/src/main/resources/META-INF/resources/CihazTanim.xhtml
+++ b/src/main/resources/META-INF/resources/CihazTanim.xhtml
@@ -3,10 +3,10 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"xmlns:p="http://primefaces.org/ui">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <title>Kullanıcı Tanım</title>
+    <title>Cihaz Tanım</title>
 
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
     <h:form>
@@ -40,62 +40,68 @@
 
 <h:body>
     <h:form id="FRMCihz">
-        <h:panelGrid styleClass="leftPanel">
-            <p:dataTable id="slnDT" var="cihaz" value="#{cihazBean.cihazList}" selectionMode="single"
-                         selection="#{cihazBean.selectedCihaz}" rowKey="#{cihaz.id}">
+        <div class="leftPanel">
+            <h:panelGrid>
+                <p:dataTable id="slnDT" var="cihaz" value="#{cihazBean.cihazList}" selectionMode="single"
+                             selection="#{cihazBean.selectedCihaz}" rowKey="#{cihaz.id}">
 
-                <p:ajax event="rowSelect" listener="#{cihazBean.onRowSelect}" update=":FRMCihz:chzPg"/>
-                <p:column headerText="Cihaz Kodu">
-                    <h:outputText value="#{cihaz.kodu}"/>
-                </p:column>
-                <p:column headerText="Cihaz Adı">
-                    <h:outputText value="#{cihaz.adi}"/>
-                </p:column>
-                <p:column headerText="Aktif Mi">
-                    <h:outputText value="#{cihaz.aktifMi}"/>
-                </p:column>
-                <p:column headerText="Salon Adı">
-                    <h:outputText value="#{cihaz.salon.salonAdi}"/>
-                </p:column>
-            </p:dataTable>
-        </h:panelGrid>
-        <h:panelGrid id="chzPg" columns="4" styleClass="rightPanel">
-            <h3>Yeni Cihaz Tanımı</h3>
-            <h:outputText/>
-            <h:outputText/>
-            <h:outputText/>
+                    <p:ajax event="rowDblselect" listener="#{cihazBean.onDcRowSelect}" update=":FRMCihz:chzPg"/>
+                    <p:column headerText="Cihaz Kodu">
+                        <h:outputText value="#{cihaz.kodu}"/>
+                    </p:column>
+                    <p:column headerText="Cihaz Adı">
+                        <h:outputText value="#{cihaz.adi}"/>
+                    </p:column>
+                    <p:column headerText="Aktif Mi">
+                        <h:outputText value="#{cihaz.aktifMi}"/>
+                    </p:column>
+                    <p:column headerText="Salon Adı">
+                        <h:outputText value="#{cihaz.salon.salonAdi}"/>
+                    </p:column>
+                </p:dataTable>
+            </h:panelGrid>
+        </div>
+        <div class="rightPanel">
+            <h:panelGrid id="chzPg" columns="4">
+                <h3>Yeni Cihaz Tanımı</h3>
+                <h:outputText/>
+                <h:outputText/>
+                <h:outputText/>
 
-            <h:outputText value="Cihaz Kodu"/>
-            <h:outputText value="*"/>
-            <p:inputText id="kodu" value="#{cihazBean.cihaz.kodu}" required="true"/>
-            <p:message for="kodu"/>
+                <h:outputText value="Cihaz Kodu"/>
+                <h:outputText value="*"/>
+                <p:inputText id="kodu" value="#{cihazBean.cihaz.kodu}" required="true"/>
+                <p:message for="kodu"/>
 
-            <h:outputText value="Cihaz Adı"/>
-            <h:outputText value="*"/>
-            <p:inputText id="adi" value="#{cihazBean.cihaz.adi}" required="true"/>
-            <p:message for="adi"/>
+                <h:outputText value="Cihaz Adı"/>
+                <h:outputText value="*"/>
+                <p:inputText id="adi" value="#{cihazBean.cihaz.adi}" required="true"/>
+                <p:message for="adi"/>
 
-            <h:outputText value="Salonu"/>
-            <h:outputText value="*"/>
-            <h:selectOneMenu id="salon" value="#{salonBean.salon}" converter="#{listConverter}">
-                <f:selectItem value="" var="salon" itemValue="" itemLabel="Salon Seçiniz" />
-                <f:selectItems value="#{salonBean.salonList}" var="salon" itemValue="#{salon}" itemLabel="#{salon.salonAdi}" />
-            </h:selectOneMenu>
-            <p:message for="salon"/>
+                <h:outputText value="Salonu"/>
+                <h:outputText value="*"/>
+                <p:selectOneMenu id="salon" value="#{cihazBean.salon}" converter="#{listConverter}">
+                    <f:selectItem itemLabel="Salon Seçiniz-" itemValue="#{null}"/>
+                    <f:selectItems value="#{salonBean.salonList}" var="salon" itemValue="#{salon}"
+                                   itemLabel="#{salon.salonAdi}"/>
+                    <p:ajax update=":FRMCihz:chzPg" listener="#{cihazBean.salon}"/>
+                </p:selectOneMenu>
+                <p:message for="salon"/>
 
-            <h:outputText value="Cihaz Aktif Mi"/>
-            <h:outputText value="*"/>
-            <p:selectBooleanCheckbox id="aktifMi" value="#{cihazBean.cihaz.aktifMi}" required="true"/>
-            <p:message for="aktifMi"/>
+                <h:outputText value="Cihaz Aktif Mi"/>
+                <h:outputText value="*"/>
+                <p:selectBooleanCheckbox id="aktifMi" value="#{cihazBean.cihaz.aktifMi}" required="true"/>
+                <p:message for="aktifMi"/>
 
-            <p:commandButton value="Kaydet" actionListener="#{cihazBean.save()}" ajax="false"
-                             icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
-            <p:commandButton value="Sil" actionListener="#{salonBean.delete()}" ajax="false"
-                             icon="ui-icon-trash"  style="left: 150px"/>
-            <p:commandButton value="Yeni" actionListener="#{salonBean.reset()}" ajax="false"
-                             icon="ui-icon-trash"  style="left: 175px"/>
+                <p:commandButton value="Kaydet" actionListener="#{cihazBean.save()}" ajax="false"
+                                 icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
+                <p:commandButton value="Sil" actionListener="#{cihazBean.delete()}" ajax="false"
+                                 icon="ui-icon-trash" style="left: 150px"/>
+                <p:commandButton value="Yeni" actionListener="#{cihazBean.reset()}" ajax="false"
+                                 icon="ui-icon-trash" style="left: 175px"/>
 
-        </h:panelGrid>
+            </h:panelGrid>
+        </div>
     </h:form>
 </h:body>
 </html>
