--- a/src/main/resources/META-INF/resources/SalonTanim.xhtml
+++ b/src/main/resources/META-INF/resources/SalonTanim.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core" >
+>
 <h:head>
     <title>Kullanıcı Tanım</title>
 
@@ -41,53 +41,47 @@
 
 <h:body>
     <h:form id="FRMSln">
-        <h:panelGrid styleClass="leftPanel">
-            <p:dataTable id="slnDT" var="salon" value="#{salonBean.salonList}" selectionMode="single"
-                         selection="#{salonBean.selectedSalon}" rowKey="#{salon.id}">
+        <div class="leftPanel">
+            <h:panelGrid>
+                <p:dataTable id="slnDT" var="salon" value="#{salonBean.salonList}" selectionMode="single"
+                             selection="#{salonBean.selectedSalon}" rowKey="#{salon.id}">
 
-                <p:ajax event="rowSelect" listener="#{salonBean.onRowSelect}" update=":FRMSln:slnPG"/>
-                <p:column headerText="Salon Kodu">
-                    <h:outputText value="#{salon.salonKodu}"/>
-                </p:column>
-                <p:column headerText="Salon Adı">
-                    <h:outputText value="#{salon.salonAdi}"/>
-                </p:column>
-            </p:dataTable>
-        </h:panelGrid>
-        <h:panelGrid id="slnPG" columns="4" styleClass="rightPanel">
-            <h3>Yeni Salon Tanımı</h3>
-            <h:outputText/>
-            <h:outputText/>
-            <h:outputText/>
+                    <p:ajax event="rowSelect" listener="#{salonBean.onRowSelect}" update=":FRMSln:slnPG"/>
+                    <p:column headerText="Salon Kodu">
+                        <h:outputText value="#{salon.salonKodu}"/>
+                    </p:column>
+                    <p:column headerText="Salon Adı">
+                        <h:outputText value="#{salon.salonAdi}"/>
+                    </p:column>
+                </p:dataTable>
+            </h:panelGrid>
+        </div>
+        <div class="rightPanel">
+            <h:panelGrid id="slnPG" columns="4">
+                <h3>Yeni Salon Tanımı</h3>
+                <h:outputText/>
+                <h:outputText/>
+                <h:outputText/>
 
-            <h:outputText value="Salon Kodu"/>
-            <h:outputText value="*"/>
-            <p:inputText id="kodu" value="#{salonBean.salon.salonKodu}" required="true"/>
-            <p:message for="kodu"/>
+                <h:outputText value="Salon Kodu"/>
+                <h:outputText value="*"/>
+                <p:inputText id="kodu" value="#{salonBean.salon.salonKodu}" required="true"/>
+                <p:message for="kodu"/>
 
-            <h:outputText value="Salon Adı"/>
-            <h:outputText value="*"/>
-            <p:inputText id="adi" value="#{salonBean.salon.salonAdi}" required="true"/>
-            <p:message for="adi"/>
-            <!--<p:toolbar style="grid-auto-columns: auto">-->
-                <!--<f:facet name="right">-->
-                    <!--<p:commandButton type="button" value="Kaydet" title="Kaydet" icon="ui-icon-disk" update="slnPG"-->
-                                     <!--actionListener="#{salonBean.saveSalon()}" ajax="false" styleClass="ui-priority-primary" />-->
-                    <!--<p:commandButton type="button" value="Sil"  title="Sil" update="slnPG"-->
-                                     <!--icon="ui-icon-trash" actionListener="#{salonBean.delete()}" ajax="false" />-->
-                    <!--<p:commandButton type="button" value="Yeni"  title="Yeni" icon="fa fa-plus" update="slnPG"-->
-                                     <!--actionListener="#{salonBean.reset()}" ajax="false" />-->
-                <!--</f:facet>-->
-            <!--</p:toolbar>-->
+                <h:outputText value="Salon Adı"/>
+                <h:outputText value="*"/>
+                <p:inputText id="adi" value="#{salonBean.salon.salonAdi}" required="true"/>
+                <p:message for="adi"/>
 
-            <p:commandButton value="Kaydet" actionListener="#{salonBean.saveSalon()}" ajax="false"
-                             icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
-            <p:commandButton value="Sil" actionListener="#{salonBean.delete()}" ajax="false"
-                             icon="ui-icon-trash"  style="left: 150px"/>
-            <p:commandButton value="Yeni" actionListener="#{salonBean.reset()}" ajax="false"
-                             icon="ui-icon-trash"  style="left: 175px"/>
+                <p:commandButton value="Kaydet" actionListener="#{salonBean.saveSalon()}" ajax="false"
+                                 icon="fa fa-save" styleClass="ui-priority-primary" style="left: 125px"/>
+                <p:commandButton value="Sil" actionListener="#{salonBean.delete()}" ajax="false"
+                                 icon="ui-icon-trash" style="left: 150px"/>
+                <p:commandButton value="Yeni" actionListener="#{salonBean.reset()}" ajax="false"
+                                 icon="ui-icon-trash" style="left: 175px"/>
 
-        </h:panelGrid>
+            </h:panelGrid>
+        </div>
     </h:form>
 </h:body>
 </html>
